# ai-resume-analyzer

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
.streamlit/: config.toml
assets/: README.md
assets/architecture/: .gitkeep
assets/demo/: .gitkeep
assets/images/: .gitkeep
configs/: config.yaml  logging.yaml
datasets/: README.md
datasets/processed/: .gitkeep
datasets/raw/: .gitkeep
docs/: Architecture.md  Challenges.md  Data_Pipeline.md  Deployment.md  Future_Work.md  Learnings.md  System_Design.md
models/: README.md
models/trained/: .gitkeep
models/vectorizers/: .gitkeep
notebooks/: README.md
scripts/: download_dataset.py  evaluate_model.py  train_model.py
src/: __init__.py
src/app/: __init__.py  main.py  ui_helpers.py
src/evaluation/: __init__.py  metrics.py  visualizer.py
src/feature_engineering/: __init__.py  keyword_extractor.py  tfidf_vectorizer.py
src/inference/: __init__.py  analyzer.py  classifier.py  similarity_scorer.py
src/preprocessing/: __init__.py  pdf_extractor.py  text_cleaner.py  tokenizer.py
src/training/: __init__.py  data_loader.py  trainer.py
src/utils/: __init__.py  bootstrap.py  config_loader.py  file_helpers.py  logger.py  text_helpers.py
tests/: __init__.py  conftest.py  test_inference.py  test_preprocessing.py  test_utils.py
