[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-resume-analyzer"
version = "0.1.0"
description = "AI-powered ATS Resume Analyzer using NLP and Machine Learning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abhishek", email = "youremail@gmail.com" }
]
keywords = ["AI", "NLP", "resume", "ATS", "machine-learning", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "nltk>=3.8.0",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-resume-analyzer"
Repository = "https://github.com/yourusername/ai-resume-analyzer"
Issues = "https://github.com/yourusername/ai-resume-analyzer/issues"
Changelog = "https://github.com/yourusername/ai-resume-analyzer/blob/main/CHANGELOG.md"

[project.scripts]
train-model = "scripts.train_model:main"
evaluate-model = "scripts.evaluate_model:main"

# ─── Tool Configuration ───────────────────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.venv
  | \.git
  | __pycache__
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false
exclude = ["notebooks/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".venv",
    "__pycache__",
    "notebooks",
    ".git",
]
